--- a/style.css
+++ b/style.css
@@ -537,6 +537,17 @@ footer ul li a:hover{
     }
 }
 
+@media (max-width: 480px) {
+    .Languages .titre {
+        font-size: 1.8rem;
+    }
+    .Languages .logos i {
+        font-size: 2.5rem;
+    }
+    .Languages .logos .logo-item span {
+        font-size: 0.85rem;
+    }
+}
 
 /* Page indisponible*/
 
